Finished Czech translation Small fixes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -294,3 +294,8 @@ ol.instructions {
   list-style-position:  inside;
   padding: 0;
 }
+
+img.icon {
+  width: 2em;
+  vertical-align: middle;
+}
